# clac

./: .gitignore  Cargo.toml  README.md  flake.nix  renovate.json  shell.nix
.github/: renovate.json
nix/: release.nix  sources.json
src/: calc.rs  main.rs  parser.rs  rpcalc.rs  traits.rs  types.rs
