[package]
name = "clac"
version = "0.1.0"
authors = ["Julian Stecklina <js@alien8.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
regex = "1"
lazy_static = "1.4.0"