[package]
name = "clac"
version = "0.1.0"
authors = ["Julian Stecklina <js@alien8.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# Speed is not important. Save some disk space instead.
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.52"
regex = "1"
lazy_static = "1.4.0"
